--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow" />
 
-    <base href="<?php echo url() ?>/"></base>
+    <base href="<?php echo url('panel') ?>/"></base>
     <title>Kirby Panel</title>
 
     <link rel="stylesheet" href="assets/css/app.css">
