--- a/views/files/index.html
+++ b/views/files/index.html
@@ -12,18 +12,18 @@
 
     <article class="file" ng-repeat="file in page.files">
       <figure>        
-        <a ng-show="file.type == 'image'" class="file__preview" href="" style="background-image: url({{file.url}})"></a>
-        <a ng-show="file.type != 'image'" class="file__preview" href="">
+        <a ng-show="file.type == 'image'" class="file__preview" ui-sref="file({filename : file.filename, uri: page.uri})" style="background-image: url({{file.url}})"></a>
+        <a ng-show="file.type != 'image'" class="file__preview" ui-sref="file({filename : file.filename, uri: page.uri})">
           <span>{{file.extension}}</span>
         </a>
         <figcaption class="file__info">
-          <a href="{{file.url}}">
+          <a ui-sref="file({filename : file.filename, uri: page.uri})">
             <strong>{{file.filename}}</strong>
             <small>{{file.type}} / {{file.size}}</small>
           </a>
         </figcaption>
         <nav class="manager__options">
-          <a ui-sref="files.modal.edit({filename : file.filename})">
+          <a ui-sref="file({filename : file.filename, uri: page.uri})">
             <i class="fa fa-pencil"></i> edit
           </a><!--
        --><a ui-sref="files.modal.delete({filename : file.filename})">
