--- a/views/menu.html
+++ b/views/menu.html
@@ -3,7 +3,7 @@
 <ul ng-show="dropdown.isOpen('menu')" class="dropdown dropdown--white menu">  
   <li><a ui-sref="page({uri: null, file: null})"><i class="fa fa-file-o"></i> Your site</a></li>
   <li><a ui-sref="users"><i class="fa fa-user"></i> Users</a></li>
-  <li><a ui-sref="logout"><i class="fa fa-power-off"></i> Logout</a></li>
+  <li><a href="./logout"><i class="fa fa-power-off"></i> Logout</a></li>
 </ul>
 
 <span ng-show="loading" class="topbar__loader"></span>
