--- a/views/page/index.html
+++ b/views/page/index.html
@@ -7,7 +7,7 @@
     <div ng-hide="page.parent == null || page.error || page.home">
       <h2><a>Page settings</a></h2>
       <ul class="sidebar__items">
-        <li ng-show="page.settings.subpages">
+        <li ng-show="page.settings.pages">
           <a ui-sref="page.modal.add({uri: page.uri})">
             <i class="fa fa-plus-circle"></i> Add a new subpage…
           </a>
@@ -44,7 +44,7 @@
       </ul>
     </div>
 
-    <div ng-show="page.settings.subpages">
+    <div ng-show="page.settings.pages">
       <h2><a ui-sref="children({uri: page.uri})">Subpages <small>manage <i class="fa fa-arrow-circle-right"></i></small></a></h2>
         
       <form ng-show="page.children.length > limit" class="sidebar__form">
