massive update with lang support and more

--- a/views/files/delete.html
+++ b/views/files/delete.html
@@ -5,8 +5,8 @@
   </div>
 
   <div class="form__field">
-    Do you really want to delete this file?
-    <strong>{{file.filename}}</strong>
+    <label class="form__label">Do you really want to delete this file?</label>
+    <div class="form__input form__input--readonly">{{file.filename}}</div>
   </div>
 
   <div class="form__buttons">
