--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -63,6 +63,21 @@ p {
   margin-bottom: 1.5em;
 }
 
+input:required,
+input:invalid {
+  box-shadow:none;
+}
+
+button::-moz-focus-inner, 
+input[type="button"]::-moz-focus-inner, 
+input[type="submit"]::-moz-focus-inner, 
+input[type="reset"]::-moz-focus-inner {
+  margin-top: -3px !important;
+  margin-bottom: -3px !important;
+  padding: 0 !important;
+  border: 0 none !important;
+}
+
 .fa {
   font-size: 14px;
 }
@@ -96,12 +111,21 @@ p {
   background: #000;
   z-index: 1000;
 }
+body.has-dropdown:after {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: "";
+  background: rgba(0,0,0, .2);
+}
 .dropdown--white {
   background: #fff;
   box-shadow: rgba(0,0,0, .2) 0px 2px 10px;
-  outline: 2000px solid rgba(0,0,0, .1);
 }
 .dropdown li {
+  position: relative;
   list-style: none;
 }
 .dropdown li a {
@@ -189,6 +213,15 @@ p {
   bottom: 0;
   border-left: 1px solid #555;
 }
+
+.languagesToggle {
+  position: absolute;
+  right: 4em;
+  height: 3em;
+  padding: .7em 1.5em;
+  border-left: 1px solid #555;
+}
+
 
 .menuToggle i,
 .previewToggle i {
@@ -647,7 +680,6 @@ p {
   background: #b3000a;
 }
 
-
 .page__template {
   border-top: 2px solid #ddd;
   margin-top: 3em;
@@ -668,6 +700,7 @@ p {
 .login {
   box-shadow: rgba(0,0,0, .1) 0 2px 10px;
   width: 20em;
+  opacity: 0;
 }
 
 /** Main **/
@@ -852,7 +885,6 @@ p {
   display: inline-block;
   border-bottom: 2px solid #ddd;
 }
-
 .manager__options {
   background: #fff;
   border-top: 1px solid #ddd;
@@ -871,6 +903,24 @@ p {
 .manager__options a i {
   color: #000;
   margin-right: .75em;
+}
+
+.manager__search {
+  position: relative;
+  margin: 0 1.5em;
+  padding: .5em 0;
+}
+.manager__searchinput {
+  -webkit-appearance: none;
+  border: 0;
+  width: 100%;
+  font-size: 1em;
+  padding: .25em 1em .25em 1em;
+  border: 2px solid #ddd;
+  background: #ddd;
+  border-radius: 5em;
+  font-weight: 400;
+  outline: 0;
 }
 
 .manager__empty {
