--- a/views/page/index.html
+++ b/views/page/index.html
@@ -3,7 +3,7 @@
 <div class="content" ng-show="page.writable.status">
 
   <aside class="sidebar">
-    
+
     <div ng-hide="page.parent == null || page.error || page.home">
       <h2><a>Page settings</a></h2>
       <ul class="sidebar__items">
@@ -11,17 +11,22 @@
           <a ui-sref="page.modal.add({uri: page.uri})">
             <i class="fa fa-plus-circle"></i> Add a new subpage…
           </a>
-        </li>  
+        </li>
+        <li ng-show="page.settings.files">
+          <a ui-sref="page.modal.upload({uri: page.uri})">
+            <i class="fa fa-cloud-upload"></i> Upload a new file…
+          </a>
+        </li>
         <li ng-show="page.changeableURL.status">
           <a ui-sref="page.modal.url({uri: page.uri})">
             <i class="fa fa-chain"></i> Change URL…
           </a>
-        </li>  
+        </li>
         <li ng-show="page.deletable.status">
           <a ui-sref="page.modal.delete({uri: page.uri})">
             <i class="fa fa-trash-o"></i> Delete page…
           </a>
-        </li>  
+        </li>
       </ul>
     </div>
 
@@ -32,7 +37,7 @@
           <a ui-sref="page.modal.add({uri: page.uri})">
             <i class="fa fa-plus-circle"></i> Add a new subpage…
           </a>
-        </li>  
+        </li>
         <li>
           <a ng-show="!metatags" ui-sref="metatags" href="">
             <i class="fa fa-pencil"></i> Edit metatags…
@@ -40,13 +45,13 @@
           <a ng-show="metatags" ui-sref="page" href="">
             <i class="fa fa-dashboard"></i> Go to dashboard…
           </a>
-        </li>  
+        </li>
       </ul>
     </div>
 
     <div ng-show="page.settings.pages">
       <h2><a ui-sref="children({uri: page.uri})">Subpages <small>manage <i class="fa fa-arrow-circle-right"></i></small></a></h2>
-        
+
       <form ng-show="page.children.length > limit" class="sidebar__form">
         <input class="sidebar__search" type="search" placeholder="Search for a subpage…" ng-model="childSearch">
       </form>
@@ -56,20 +61,20 @@
           <a ui-sref="page({uri: child.uri})">
             <i class="fa" ng-class="pageIconClass(child)"></i> {{child.title}}
 
-            <small ng-show="child.num" class="num">{{child.num}}</small>
-            <small ng-show="!child.num" class="num">—</small>
+            <small ng-show="child.visible" class="num">{{child.num}}</small>
+            <small ng-show="!child.visible" class="num">—</small>
           </a>
-        </li>  
+        </li>
         <li ng-show="page.children.length > limit">
           <a ui-sref="children({uri: page.uri})" class="more">
             <i class="fa fa-arrow-circle-right"></i> Show all ({{page.children.length}})…
-          </a>          
+          </a>
         </li>
-        <li ng-show="page.children.length == 0"><span>This page has no subpages</span></li>
+        <li ng-show="page.children.length == 0"><span ui-sref="page.modal.add({uri: page.uri})">This page has no subpages</span></li>
       </ul>
 
     </div>
-  
+
     <div ng-show="page.parent && page.settings.files">
       <h2><a ui-sref="files({uri: page.uri})">Files <small>manage <i class="fa fa-arrow-circle-right"></i></small></a></h2>
       <ul class="sidebar__items">
@@ -77,16 +82,8 @@
           <a ui-sref="file({filename: file.filename, uri: page.uri})">
             <i class="fa fa-picture-o"></i> {{file.filename}}
           </a>
-        </li>  
-        <li ng-show="page.files.length == 0"><span>This page has no files</span></li>
-        <!--
-        <li>
-          <form class="dz" action="api/files/upload" dropzone done="upload()">
-            <i class="fa fa-cloud-upload fa-lg"></i>
-            <input type="hidden" name="uri" ng-value="page.uri">
-          </form>
         </li>
-        -->
+        <li ng-show="page.files.length == 0"><span ui-sref="page.modal.upload({uri: page.uri})">This page has no files</span></li>
       </ul>
 
     </div>
@@ -95,11 +92,11 @@
       <h2><a>Error Page</a></h2>
       <p class="sidebar__text">
         This is your site's error page.
-        Your visitors will see this whenever they 
-        enter a URL, which is not available. 
+        Your visitors will see this whenever they
+        enter a URL, which is not available.
       </p>
     </div>
-    
+
   </aside>
 
   <main class="main" ng-include="main"></main>
