--- a/views/children/index.html
+++ b/views/children/index.html
@@ -10,21 +10,19 @@
     </a>
   </header>
 
-  <!--
-  <div ng-show="page.children.length != 0" class="manager__search">
+  <div ng-show="page.children.length > 20" class="manager__search">
     <input class="manager__searchinput" type="search" ng-model="search" placeholder="Search for a subpage…">
   </div>
-  -->
 
   <div class="subpages" ng-show="page.children.length != 0">
 
     <div class="grid">
-      <div class="grid__item one-half">
+      <div class="grid__item" ng-class="visibleClass">
 
         <h2 class="beta">Visible subpages</h2>
 
         <ul id="visible-children" class="sortable">
-          <li id="{{child.uid}}" ng-dblclick="$state.go('page', {uri: child.uri})" class="subpage" ng-class="{deletable: dropdown.isOpen('subpage-' + child.uid)}" ng-repeat="child in visible = (page.children | filter: {visible: true, title: search})">
+          <li id="{{child.uid}}" ng-dblclick="$state.go('page', {uri: child.uri})" class="subpage" ng-class="{deletable: dropdown.isOpen('subpage-' + child.uid)}" ng-repeat="child in visibleChildren | filter: {title: search}">
             <strong>{{child.title}}</strong>
             <small class="num">{{child.num}}</small>
 
@@ -43,14 +41,18 @@
           </li>
         </ul>
 
+        <div class="subpages__hint subpages__hint--left" ng-show="visibleChildren.length == 0">
+          Drag pages from the right here to sort them/make them visible.
+        </div>
+
       </div><!--
 
-   --><div class="grid__item one-half">
+   --><div class="grid__item" ng-class="invisibleClass">
 
         <h2 class="beta">Invisible subpages</h2>
 
         <ul id="invisible-children" class="sortable">
-          <li id="{{child.uid}}" ng-dblclick="$state.go('page', {uri: child.uri})" class="subpage" ng-class="{deletable: dropdown.isOpen('subpage-' + child.uid)}" ng-repeat="child in invisible = (page.children | filter: {visible: false, title: search})">
+          <li id="{{child.uid}}" ng-dblclick="$state.go('page', {uri: child.uri})" class="subpage" ng-class="{deletable: dropdown.isOpen('subpage-' + child.uid)}" ng-repeat="child in invisibleChildren | filter: {title: search}">
             <strong>{{child.title}}</strong>
             <small class="num">—</small>
 
@@ -68,6 +70,10 @@
             </form>
           </li>
         </ul>
+
+        <div class="subpages__hint subpages__hint--right" ng-show="invisibleChildren.length == 0">
+          Drag pages from the left here to unsort them/make them invisible.
+        </div>
 
       </div>
     </div>
