--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -698,6 +698,7 @@ body.has-dropdown:after {
 .manager__options a {
   width: 50%;
   display: inline-block;
+  white-space: nowrap;
   font-weight: 400;
   color: #777;
   font-size: .9em;
