--- a/assets/css/tagbox.css
+++ b/assets/css/tagbox.css
@@ -9,7 +9,7 @@
   overflow:hidden!important;
   padding:0!important;
   position: absolute!important;
-  width:1px!important;  
+  width:1px!important;
 }
 .tagbox__list {
   margin: 0 0 -.2em 0;
@@ -26,13 +26,14 @@
   cursor: pointer;
   line-height: 1em;
   border-radius: 2px;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 .tagbox__tag.selected {
   background: #8dae28;
 }
 .tagbox__tag__name {
   display: inline-block;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1em;
   padding: .45em 2.5em .45em 1em;
   font-size: .9em;
