--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -174,6 +174,7 @@ body.has-dropdown:after {
   width: 4em;
   height: 100%;
   text-align: center;
+  background: #000;
 }
 
 .menuToggle {
@@ -196,6 +197,7 @@ body.has-dropdown:after {
   height: 3em;
   padding: .7em 1.5em;
   border-left: 1px solid #555;
+  background: #000;
 }
 
 
@@ -231,7 +233,7 @@ body.has-dropdown:after {
 }
 .breadcrumb li {
   position: relative;
-  display: inline-block;
+  float: left;
 }
 .breadcrumb a {
   display: block;
@@ -243,7 +245,7 @@ body.has-dropdown:after {
 }
 .breadcrumb a span {
   display: block;
-  padding: 1em 1.25em;
+  padding: .7em 1.25em .75em;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -741,10 +743,12 @@ body.has-dropdown:after {
 }
 
 .files {
+  position: relative;
   padding: 0 .75em;
 }
 .file {
-  display: inline-block;
+  position: relative;
+  float: left;
   padding: 0 .75em 1.5em;
   width: 100%;
 }
