--- a/assets/css/hacks.css
+++ b/assets/css/hacks.css
@@ -259,7 +259,7 @@ a.tag {
 }
 
 .uid-preview {
-  width: 20em;
+  max-width: 20em;
   overflow: hidden;
   display: block;
   -ms-word-break: break-word;
