--- a/assets/css/hacks.css
+++ b/assets/css/hacks.css
@@ -277,3 +277,9 @@ a.tag {
 .modal {
   z-index: 1000;
 }
+
+.input-list-item .input {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
