--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,4 +1,21 @@
-@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600);
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/sourcesanspro-400.woff) format('woff');
+}
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 600;
+  src: url(../fonts/sourcesanspro-600.woff) format('woff');
+}
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: italic;
+  font-weight: 400;
+  src: url(../fonts/sourcesanspro-400-italic.woff) format('woff');
+}
 
 *, *:before, *:after {
   margin: 0;
