--- a/app/fields/date/assets/css/pikaday.css
+++ b/app/fields/date/assets/css/pikaday.css
@@ -9,6 +9,7 @@
   border: 3px solid #151515;
   border-radius: 3px;
   box-shadow: rgba(0,0,0, .1) 0px 5px 10px;
+  z-index: 1000;
 }
 .pika-single:before {
   position: absolute;
