Modify the font-family for better Chinese font face rendering.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -124,7 +124,7 @@ body.loading:before {
 */
 * {
   font-size: 100%;
-  font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Source Sans Pro", "Apple LiGothic Medium", "Microsoft JhengHei UI", "Helvetica Neue", Arial, sans-serif;
 }
 
 .light {
